--- a/fe/package.json
+++ b/fe/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
