--- a/fe/package.json
+++ b/fe/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "@web3-react/core": "^8.2.3",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
