--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
     "ethers": "^6.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
