--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@web3-react/core": "^8.2.3",
     "chart.js": "^4.4.1",
