--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@web3-react/core": "^8.2.3",
+    "apexcharts": "^3.45.1",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
