--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@web3-react/core": "^8.2.3",
     "apexcharts": "^3.45.1",
