--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
+    "faker": "^6.6.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "preline": "^2.0.2",
@@ -31,6 +32,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
+    "tw-elements": "^1.1.0",
     "viem": "^1.19.13",
     "wagmi": "^1.4.11"
   },
