--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,8 @@
     "eject": "vite eject"
   },
   "dependencies": {
+    "object-path": ">=0.11.8",
+    "follow-redirects": ">=1.15.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
@@ -30,12 +32,14 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
-    "sort-by": "^0.0.2",
+    "sort-by": "^1.2.0",
     "tw-elements": "^1.1.0",
     "viem": "^1.19.13",
     "wagmi": "^1.4.11"
   },
   "devDependencies": {
+    "object-path": ">=0.11.8",
+    "follow-redirects": ">=1.15.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
