--- a/fe/package.json
+++ b/fe/package.json
@@ -18,7 +18,7 @@
     "@material-tailwind/react": "^2.1.8",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@web3-react/core": "^8.2.3",
-    "apexcharts": "^3.45.1",
+    "apexcharts": "^3.46.0",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
@@ -28,6 +28,7 @@
     "object-path": ">=0.11.8",
     "preline": "^2.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
