--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@web3-react/core": "^8.2.3",
     "apexcharts": "^3.46.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
@@ -29,6 +30,7 @@
     "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
