--- a/smartcontract/package.json
+++ b/smartcontract/package.json
@@ -20,5 +20,8 @@
     "solidity-coverage": "^0.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "check-dependencies": "^2.0.0"
   }
 }
